--- a/project.properties
+++ b/project.properties
@@ -13,6 +13,6 @@
 # Project target.
 target=android-21
 android.library.reference.1=..\\meijia-lib-easeui
-android.library.reference.2=../base_library_pullToRefresh_chenyoca
+android.library.reference.2=..\\base_library_pullToRefresh_chenyoca
 dex.force.jumbo=true
 
