--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1199,6 +1199,20 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" >
         </activity>
+        <!-- 所有服务商 -->
+        <activity
+            android:name="com.meijialife.simi.activity.AllPartnerListActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|stateAlwaysHidden" >
+        </activity>
+        <!-- 积分列表 -->
+        <activity
+            android:name="com.meijialife.simi.activity.MyIntegralActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|stateAlwaysHidden" >
+        </activity>
         
     </application>
 
