--- a/project.properties
+++ b/project.properties
@@ -16,3 +16,4 @@ android.library.reference.1=..\\meijia-lib-easeui
 android.library.reference.2=..\\base_library_pullToRefresh_chenyoca
 dex.force.jumbo=true
 
+android.library.reference.3=../../demo/android-auto-scroll-view-pager-master
