--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 18 11:51:24 GMT+08:00 2016
-sdk.dir=D\:\\workspace\\tools\\as\\tools\\sdk
+#Mon Apr 11 18:42:48 GMT+08:00 2016
+sdk.dir=D\:\\workspace\\software\\android\\adt\\adt-bundle-windows-x86_64-20140702\\sdk
