--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Apr 11 18:42:48 GMT+08:00 2016
-sdk.dir=D\:\\workspace\\software\\android\\adt\\adt-bundle-windows-x86_64-20140702\\sdk
+sdk.dir=C\:\\workspace\\tools\\android-sdk
