--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="C:/workspace/work/android/meijia-simis/meijia-lib-easeui/libs/easemobchat_2.2.3.jar"/>
+	<classpathentry kind="lib" path="D:/workspace/work/android/meijia/meijia-lib-easeui/libs/easemobchat_2.2.3.jar"/>
 	<classpathentry kind="src" path="/EaseUI"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Android Private Dependency"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
