--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,21 @@
-apply plugin: 'com.android.application'
+apply plugin: 'android'
 
 dependencies {
-	
     compile fileTree(dir: 'libs', include: '*.jar')
     compile project(':meijia-lib-easeui')
+    compile project(':base_library_pullToRefresh_chenyoca')
     compile project(':umeng_community_library_project')
     compile project(':meijia-lib-easeui')
-    compile project(':base_library_pullToRefresh_chenyoca')
-
 }
-
-task launcherJar(type: Jar) {
- appendix = "launcher"
-    manifest {
- attributes "Class-Path": (configurations.runtime.files + jar.outputs.files)*.name.join(" ")
- }
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "23.0.3"
+    buildToolsVersion "23.0.2"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-    
-    lintOptions {
-    	abortOnError false
- 	}
 
     sourceSets {
         main {
