--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,7 @@ apply plugin: 'android'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
-    compile project(':meijia-lib-easeui')
     compile project(':base_library_pullToRefresh_chenyoca')
-    compile project(':umeng_community_library_project')
     compile project(':meijia-lib-easeui')
 }
 
@@ -15,6 +13,15 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
+    }
+    signingConfigs {
+        debug {
+            keyAlias 'meijialife'
+            keyPassword 'a123456'
+            storeFile file('D:\\workspace\\work\\android\\meijia-simi\\meijia-kestore\\debug\\debug.keystore')
+            storePassword ''
+        }
+        releaseConfig {}
     }
 
     sourceSets {
