--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -211,10 +211,6 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.FeedBackActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize" />
-        <activity
             android:name=".activity.WebViewActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize" />
@@ -289,15 +285,15 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <!-- 积分商城 -->
-        <activity
+       <!--  <activity
             android:name=".activity.PointsActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize" />
+            android:windowSoftInputMode="stateHidden|adjustResize" /> -->
         <!-- 怎样获取积分 -->
-        <activity
+       <!--  <activity
             android:name=".activity.PointsHelpActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize" />
+            android:windowSoftInputMode="stateHidden|adjustResize" /> -->
         <!-- 分享有奖 -->
         <activity
             android:name=".activity.ShareActivity"
@@ -369,10 +365,10 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <!-- 敬请期待页 -->
-        <activity
+        <!-- <activity
             android:name=".activity.NullWaitActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize" />
+            android:windowSoftInputMode="stateHidden|adjustResize" /> -->
         <activity
             android:name=".activity.PointsShopActivity"
             android:screenOrientation="portrait"
@@ -1138,20 +1134,6 @@ _
             android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" >
-        </activity>
-        <!-- 车辆速通列表 -->
-        <activity
-            android:name="com.meijialife.simi.activity.MainPlusCarActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|stateAlwaysHidden" >
-        </activity>
-        <!-- 车辆速通下单 -->
-        <activity
-            android:name="com.meijialife.simi.activity.MainPlusCarOrderActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateVisible" >
         </activity>
         <activity
             android:name="com.meijialife.simi.activity.NoticeActivity"
