-- 分包方式，重新加载了IM语音和图片

--- a/project.properties
+++ b/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-21
-android.library.reference.1=..\\meijia-lib-easeui
-android.library.reference.2=..\\base_library_pullToRefresh_chenyoca
+android.library.reference.1=../base_library_pullToRefresh_chenyoca
 dex.force.jumbo=true
 
+android.library.reference.2=../meijia-lib-easeui
